// PlanBot Database Schema

Table users {
  id bigserial [primary key, increment]
  telegram_id bigint [unique, not null, note: 'Уникальный ID пользователя в Telegram']
  username varchar(255) [note: 'Username в Telegram (@username)']
  first_name varchar(255) [note: 'Имя пользователя']
  last_name varchar(255) [note: 'Фамилия пользователя']
  daily_capacity decimal(5,2) [default: 8.0, note: 'Часов работы в день']
  work_days integer[] [default: `ARRAY[1,2,3,4,5]`, note: 'Рабочие дни (1=Пн, 7=Вс)']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Таблица пользователей Telegram-бота'
}

Table tasks {
  id bigserial [primary key, increment]
  user_id bigint [not null, ref: > users.id, note: 'Владелец задачи']
  title varchar(500) [not null, note: 'Название задачи']
  description text [note: 'Подробное описание']
  hours_required decimal(5,2) [not null, note: 'Требуется часов для выполнения']
  priority integer [default: 0, note: 'Приоритет 0-10 (10=высший)']
  status varchar(50) [default: 'pending', note: 'pending/scheduled/in_progress/completed/cancelled']
  deadline timestamp [note: 'Крайний срок выполнения']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  completed_at timestamp [note: 'Дата завершения задачи']
  
  Note: 'Таблица задач пользователей'
}

Table task_schedules {
  id bigserial [primary key, increment]
  task_id bigint [not null, ref: > tasks.id, note: 'Задача, которая запланирована']
  scheduled_date date [not null, note: 'Дата планирования']
  hours_allocated decimal(5,2) [not null, note: 'Часов выделено на этот день']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Расписание выполнения задач по дням. Одна задача может быть распределена на несколько дней.'
}

// Связи
Ref: tasks.user_id > users.id [delete: cascade]
Ref: task_schedules.task_id > tasks.id [delete: cascade]

// Индексы
Table indexes {
  Note: '''
  # Индексы для производительности
  
  CREATE INDEX idx_users_telegram_id ON users(telegram_id);
  CREATE INDEX idx_tasks_user_id ON tasks(user_id);
  CREATE INDEX idx_tasks_status ON tasks(status);
  CREATE INDEX idx_tasks_deadline ON tasks(deadline);
  CREATE INDEX idx_task_schedules_task_id ON task_schedules(task_id);
  CREATE INDEX idx_task_schedules_date ON task_schedules(scheduled_date);
  '''
}

